testsuite/poke.pkl/struct-method-diag-5.pk
/* { dg-do compile } */

var n = 3;
type Foo =
  struct
  {
    byte j;
    struct
    {
      byte x;
      method foo = byte:
        {
          return (x
                  + j /* { dg-error "field" } */
                  - 1);
        }
    } je;

    byte y : y > je.foo;
    method bar = byte: { return je.foo; }
  };
